--- a/Question_1.html
+++ b/Question_1.html
@@ -38,7 +38,7 @@
 <div id='page_questions1'>
 		<div id = "App_header_Title_Box">
 		
-			<h1 style='font-size:2em;font-weight: 900;'>PROMIS Upper Extremity Form</h1>
+			<h1 style='font-size:2em;font-weight: 900;margin-top:-20px;'>PROMIS Upper Extremity Form</h1>
 		
 		<div style="font-size:1.2em; color:black;font-weight: 350;margin: auto;width:50%;box-shadow: 10px 10px;border:2px solid grey">
 			
@@ -85,7 +85,7 @@
 			
 			
 				
-			<div><img id="q1_gif" src="GIF/q1.gif">	</div>	
+			<div><img id="q1_gif" src="GIF/V2-1-1.gif">	</div>	
 		</div>
 	
 		<div id="Answers1" >
