--- a/Question_1.html
+++ b/Question_1.html
@@ -38,7 +38,7 @@
 <div id='page_questions1'>
 		<div id = "App_header_Title_Box">
 		
-			<h1 style='font-size:2em;font-weight: 900;margin-top:-20px;'>PROMIS Upper Extremity Form</h1>
+			<h1 style='font-size:1.5em;font-weight: 900;margin-top:-20px;'>PROMIS Upper Extremity Form</h1>
 		
 		<div style="font-size:1.2em; color:black;font-weight: 350;margin: auto;width:50%;box-shadow: 10px 10px;border:2px solid grey">
 			
@@ -67,7 +67,7 @@
 
 			<div>
 				<div style='display:inline-block;text-align: center;'>
-					<h3 class='Question_Header1' ><b>1. Are you able <br>to carry a heavy object<br> (over 10 pounds/5 kg)?</b>			
+					<h3 class='Question_Header1' ><b>1. Are you able to carry a heavy object(over 10 pounds/5 kg)?</b>			
 					</h3>
 				</div>
 				<div id = 'q1icon' style='display: inline-block;text-align:center;border: 2px solid black;box-shadow:2px 2px;border-radius:15px;background-color:lightgray;height: 85px;padding: 5px;' >
