--- a/Question_1.html
+++ b/Question_1.html
@@ -226,7 +226,7 @@
 				    </div>
 
 				    <div >
-				    	<span id="q1a5t"  ><b>Unable to do</b></span>
+				    	<span id="q1a5t"><b>Unable to do</b></span>
 				    </div>
 				</div>
 				&nbsp;&nbsp;
@@ -631,8 +631,8 @@
 
 				    </div>
 
-				    <div style='padding: 3px;'>
-				    	<span id="q2a5t" ><b>Unable to do</b></span>
+				    <div >
+				    	<span id="q3a5t" ><b>Unable to do</b></span>
 				    </div>
 				</div>
 				&nbsp;&nbsp;
@@ -844,7 +844,7 @@
 
 				    </div>
 
-				    <div style='padding: 3px;'>
+				    <div >
 				    	<span id="q4a5t" ><b>Unable to do</b></span>
 				    </div>
 				</div>
@@ -1056,7 +1056,7 @@
 
 				    </div>
 
-				    <div style='padding: 3px;'>
+				    <div >
 				    	<span id="q5a5t" ><b>Unable to do</b></span>
 				    </div>
 				</div>
@@ -1266,7 +1266,7 @@
 
 				    </div>
 
-				    <div style='padding: 3px;'>
+				    <div>
 				    	<span id="q6a5t" ><b>Unable to do</b></span>
 				    </div>
 				</div>
@@ -1473,7 +1473,7 @@
 
 				    </div>
 
-				    <div style='padding: 3px;'>
+				    <div>
 				    	<span id="q7a5t" ><b>Unable to do</b></span>
 				    </div>
 				</div>
