alignments for first page

--- a/Question_1.html
+++ b/Question_1.html
@@ -38,7 +38,7 @@
 <div id='page_questions1'>
 		<div id = "App_header_Title_Box">
 		
-			<h1 style='font-size:1.5em;font-weight: 900;margin-top:-28px;'>PROMIS Upper Extremity Form</h1>
+			<h1 style='font-size:1.5em;font-weight: 900;margin-top:-28px;padding-bottom: 10px;'>PROMIS Upper Extremity Form</h1>
 		
 		<div style="font-size:1.2em; color:black;font-weight: 350;margin: auto;width:50%;box-shadow: 5px 5px;border:1px solid grey;margin-top:-10px;">
 			
@@ -61,13 +61,14 @@
 		</div>
 
 		<br>
+		<br>
 		
 		<!-- QUESTION 1 -->
 		<div id = Question1 >	
 
 			<div>
 				<div style='display:inline-block;text-align: center;margin-top:-20px;'>
-					<h3 class='Question_Header1' ><b>1. Are you able to carry a heavy object(over 10 pounds/5 kg)?</b>			
+					<h3 class='Question_Header1' ><b>1. Are you able to carry a heavy object (over 10 pounds/5 kg) ?</b>			
 					</h3>
 				</div>
 				<div id = 'q1icon' style='display: inline-block;text-align:center;border: 2px solid black;box-shadow:2px 2px;border-radius:15px;background-color:lightgray;height: 65px;' >
@@ -1124,7 +1125,9 @@
 				<div style='display:inline-block;text-align: center;'>
 					<h3 class='Question_Header6'><b>6. Are you able to change a light bulb overhead?</b>
 					</h3>
+
 				</div>
+				<br>
 				<div id = 'q6icon' style='display: inline-block;text-align:center;border: 2px solid black;box-shadow:2px 2px;border-radius:15px;background-color:lightgray;height: 60px;'>
 					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="88" height="65" viewBox="0 -10 218 233" xml:space="preserve" style = "cursor: pointer;" onclick="PlayQuestion6(this)">
 						<path fill="#2EC4B6" opacity="1.000000" stroke="#2EC4B6" stroke-width="5" d=" M89.940216,30.135456   C73.445122,26.639828 58.883698,34.112072 51.799980,49.293087   C50.649452,51.758770 50.204334,56.197262 46.011002,54.294662   C41.941311,52.448162 44.104237,48.906387 45.399490,46.069305   C54.679070,25.743551 74.599922,17.861284 97.721748,23.829306   C134.609680,33.350529 148.906403,80.585938 119.715744,111.118279   C114.379341,116.699974 108.134544,121.122963 102.244820,126.008385   C95.926460,131.249344 90.462540,137.017700 87.054527,144.834763   C81.395821,157.814346 69.367447,163.612671 57.024769,160.176437   C45.183098,156.879669 37.103107,143.469833 39.844757,131.649155   C40.337639,129.524078 41.378433,127.751251 43.848774,128.078262   C46.235527,128.394196 47.160534,130.317474 46.960747,132.483078   C46.745117,134.820450 46.703247,137.059891 47.119427,139.406570   C48.387566,146.557037 52.260967,151.090225 59.420124,152.829681   C66.669197,154.590973 72.546356,152.475739 77.245842,146.854279   C78.305878,145.586304 79.378319,144.200607 79.962631,142.683304   C84.556877,130.753189 93.852913,122.919022 103.611504,115.560127   C111.026733,109.968346 117.432930,103.534973 122.005074,95.417336   C137.767456,67.431953 122.414078,35.816124 89.940216,30.135456  z"/>
@@ -1326,7 +1329,7 @@
 		<div id = Question7 >	
 			<div style='display:inline-block;text-align: center;'>
 				<div style='display:inline-block;text-align: center;margin-top: -30px;'>
-					<h3 class='Question_Header7'><b>7. Are you able to pass a 20-pound (10 kg)turkey or ham to other people at the table?</b>
+					<h3 class='Question_Header7'><b>7. Are you able to pass a 20-pound (10 kg) turkey or ham to other people at the table?</b>
 					</h3>
 				</div>
 				<div id = 'q7icon' style='display: inline-block;text-align:center;border: 2px solid black;box-shadow:2px 2px;border-radius:15px;background-color:lightgray;height: 60px;'>
@@ -1433,7 +1436,7 @@
 				<div id = 'radio7d' style='width:5%'>
 					<input type="radio" name="rGroup" value="7d" id="r7d" style="height:28px; width:28px; vertical-align: middle;" class="rb7"/>
 				</div>&nbsp;&nbsp;
-				<div id="q7a4" class ='option7'onClick="ChangeQuestionColor(this);Optionsreset6(this.id);">
+				<div id="q7a4" class ='option7'onClick="ChangeQuestionColor(this);Optionsreset7(this.id);">
 					<div style="padding: 50px;">
 						<i class="fa-regular fa-face-frown fa-xl"style='color:#2EC4B6;'></i>
 					</div>
