--- a/Confirmation_Page.html
+++ b/Confirmation_Page.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>mPROM Confirmation Page</title>
     <link rel="stylesheet" href="font-6/css/all.css">
     
