--- a/Confirmation_Page.html
+++ b/Confirmation_Page.html
@@ -24,7 +24,7 @@
           <div id="Checkbox_Preference">
 
           
-            <i class="fa-regular fa-circle-check fa-2xl fa-shake" style="padding: 5px;color:white;"></i>
+            <i class="fa-regular fa-circle-check fa-xl fa-shake" style="padding: 5px;color:white;"></i>
 
 
           </div>
