--- a/Question_1.html
+++ b/Question_1.html
@@ -38,7 +38,7 @@
 <div id='page_questions1'>
 		<div id = "App_header_Title_Box">
 		
-			<h1 style='font-size:1.5em;font-weight: 900;margin-top:-28px;padding-bottom: 10px;'>PROMIS Upper Extremity Form</h1>
+			<h1 style='font-size:1.5em;font-weight: 900;margin-top:-28px;padding: 5px;'>PROMIS Upper Extremity Form</h1>
 		
 		<div style="font-size:1.2em; color:black;font-weight: 350;margin: auto;width:50%;box-shadow: 5px 5px;border:1px solid grey;margin-top:-10px;">
 			
@@ -61,13 +61,13 @@
 		</div>
 
 		<br>
-		<br>
+		<!-- <br> -->
 		
 		<!-- QUESTION 1 -->
 		<div id = Question1 >	
 
 			<div>
-				<div style='display:inline-block;text-align: center;margin-top:-20px;'>
+				<div style='display:inline-block;text-align: center;'>
 					<h3 class='Question_Header1' ><b>1. Are you able to carry a heavy object (over 10 pounds/5 kg) ?</b>			
 					</h3>
 				</div>
